# reviewpanel

./: .gitignore  README.md  pyproject.toml
reviewpanel/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
reviewpanel/migrations/: 0001_initial.py  0002_alter_input_options_cohort_allow_skip.py  0003_alter_cohort_inputs_alter_panel_panelists_and_more.py  0004_cohort_size.py  0005_presentation_options.py  0006_alter_cohortmember_object_id_alter_score_object_id_and_more.py  0006_metric_metric_unique_metric_name.py  0007_metric_display_values.py  0008_input_show_in_index_alter_metric_input.py  0009_alter_template_program_and_initial_data.py
reviewpanel/static/css/: markdown.css  reviewpanel.css  submission.css
reviewpanel/static/js/: submission.js
reviewpanel/templates/admin/reviewpanel/: add_to_cohort.html  add_to_panel.html  cohort_status.html  export_forms.html  panelists_confirmation.html  report_submissions.html
reviewpanel/templates/admin/reviewpanel/cohort/: change_form.html
reviewpanel/templates/admin/reviewpanel/panel/: submit_line.html
reviewpanel/templates/reviewpanel/: base.html  form_complete.html  form_index.html  item_file.html  item_selector.html  program_index.html  submission.html  submission_file.html  submission_inputs.html  submission_metrics.html  submission_section.html
reviewpanel/templatetags/: rputils.py  submission.py
