[tool.poetry]
name = "reviewpanel"
version = "0.4.1"
description = "Formative plugin for reviewing and scoring applicant submissions"
authors = ["John Kyle Cronan"]
license = "LGPL-2.1"
readme = "README.md"
homepage = "https://github.com/johncronan/reviewpanel"
repository = "https://github.com/johncronan/reviewpanel"
keywords = ["review", "panel", "score", "formative"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Intended Audience :: System Administrators",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Multimedia",
    "Topic :: Office/Business :: Groupware",
]

[tool.poetry.plugins."formative.plugin"]
reviewpanel = "reviewpanel:FormativePluginMeta"

[tool.poetry.dependencies]
python = "^3.8"
"backports.zoneinfo" = { version = "*", python = "~3.8" }
django = ">=3.1"
formative = ">=0.8.10"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
